--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,7 @@
 /* This file is for your main application CSS */
 @import "./phoenix.css";
+@import "./map.css";
+@import "./buttons.css";
 
 /* Alerts and form errors used by phx.new */
 .alert {
