--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -17,6 +17,13 @@
 	height: 4em;
 }
 
+.map-tile-count {
+	margin-left: 0.3em;
+	position: absolute;
+	color: red;
+	font-weight: bold;
+}
+
 .map-brick {
 	background-color: dimgray;
 	border: 0.2px solid;
